--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "react-router-dom": "^6.11.1"
   }
 }
